Updates from Overleaf

--- a/codepad-jshell.tex
+++ b/codepad-jshell.tex
@@ -11,21 +11,29 @@
 
 \section{Introduction}
 
-Learn to program computers is hard. 
+Learning to program computers is hard. 
 
 Objects later
 
 Objects first
 
+Visual
+
 BlueJ is
 
 Code Pad is
 
-JShell
+JShell is
 
 Comparing Code Pad and JShell features
 
 Features are
 
+
+\section{Feature Modeling}
+Commonality and variability are
+
+
+\section{Conclusion}
 
 \end{document}
