Updates from Overleaf

--- a/codepad-jshell.tex
+++ b/codepad-jshell.tex
@@ -28,10 +28,44 @@ JShell is
 Comparing Code Pad and JShell features
 
 Features are
+\section{Learner Expectations}
+
+Get a job fast
+
+Use professional tools
+
+Write professional programs: mobile and Web.
+
+\section{Usage Scenarios}
+
+Exercises from Barnes and Kolling
+
+Evaluate expressions
+
+Method call
+
+Two-way integration with visual object model
+
+After each compile
+
+Importing packages
+
+Variable declaration
+
+Saving scripts
+
+Conditional commands
 
 
 \section{Feature Modeling}
 Commonality and variability are
+
+\section{Related Works}
+
+
+\section{Discussion}
+
+JShell is a professional tool
 
 
 \section{Conclusion}
