--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -1,5 +1,5 @@
 @book{barnes2008objects,
-  title     = {Objects First with Java: A Practical Introduction using BlueJ},
+  title     = {Objects First with {Java}: A Practical Introduction using {BlueJ}},
   author    = {Barnes, David J. and Kölling, Michael},
   year      = {2008},
   edition   = {4th},
@@ -30,8 +30,18 @@
 
 @misc{politz_minnes2018jshell,
   author       = {Politz, Joe Gibbs and Minnes, Mia},
-  title        = {Using {JShell}: Notes for CSE 8A},
+  title        = {Using {JShell}: Notes for {CSE 8A}},
   howpublished = {\url{https://ucsd-cse8a-f18.github.io/notes/jshell/}},
   year         = {2018},
   note         = {University of California, San Diego. Accessed 2025-10-04}
+}
+
+@misc{mangan2025codepadjshell,
+  author    = {Marco Aur{\'e}lio Souza Mangan},
+  title     = {Comparing {Code Pad} and {JShell} features},
+  year      = {2025},
+  url       = {https://github.com/masmangan/your-repo-name},
+  urldate   = {2025-10-04},
+  version   = {0.1.0},
+  note      = {GitHub repository},
 }
