Updates from Overleaf

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -40,8 +40,10 @@
   author    = {Marco Aur{\'e}lio Souza Mangan},
   title     = {Comparing {Code Pad} and {JShell} features},
   year      = {2025},
-  url       = {https://github.com/masmangan/your-repo-name},
+  howpublished       = {\url{https://github.com/codantche/codepad-jshell}},
   urldate   = {2025-10-04},
   version   = {0.1.0},
   note      = {GitHub repository},
 }
+
+%https://en.wikipedia.org/wiki/JShell
