--- a/paper/codepad-jshell.tex
+++ b/paper/codepad-jshell.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 \usepackage{graphicx} 
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
 \usepackage{plantuml}
 \usepackage{url}
 
