Updates from Overleaf

--- a/paper/codepad-jshell.tex
+++ b/paper/codepad-jshell.tex
@@ -26,7 +26,7 @@
 
 \lstset{style=jshell}
 
-\title{Comparing Code Pad and JShell features}
+\title{Comparing Code Pad and JShell Features: A Pragmatic Pedagogical Perspective}
 \author{Marco Mangan\thanks{\texttt{marco.mangan@gmail.com}}}
 \date{October 2025}
 
@@ -45,6 +45,9 @@ The study contributes to understanding how professional and educational tools ca
 \end{abstract}
 
 \section{Introduction}
+
+This work presents a pragmatic pedagogical comparison between BlueJ’s Code Pad and Java’s JShell.
+Rather than focusing on instructional theory, the study examines how students act upon the features effectively available in each environment during introductory programming tasks.
 
 Learning to program computers is hard. By the late 1990s, the need to learn object-oriented programming sparked the discussion on learning aproches. Historically, programmers evolved their skills from computer architecture, to assembly, to early programming languages. In this evolution, they have learned objects later.
 
@@ -66,6 +69,9 @@ compare Code Pad and JShell features
 Feature Modeling is
 
 \section{Motivation}
+
+Regardless of pedagogical foundations or teaching philosophy, students respond to the tools actually at hand.
+Their exploratory behavior is therefore shaped more by environmental affordances—what the interface allows them to do—than by abstract learning principles
 
 This study is motivated by observations on the classroom of a undergraduate Computer Science course since the adoption of Java, BlueJ, and the Objects First approach.
 
@@ -100,7 +106,6 @@ Even with this focus, we need to use sub-features to allow a direct comparison. 
 \section{Methodology}
 
 Literature review
-
 
 Benchmark with examples
 
@@ -157,8 +162,10 @@ Saving scripts
 Conditional commands
 
 
-\section{Feature Modeling}
+\section{Pragmatic Feature Comparison}
 Commonality and variability are
+
+The comparison presented here focuses on what learners can directly experience in practice, rather than on the theoretical intent of each design.
 
 \section{Related Work}
 
@@ -197,7 +204,12 @@ Code Pad has unique features, as the integration with visual models, and a simpl
 
 Balance the power of the Java Shell with the easier adoption of BlueJ.
 
-Further studies are needed to complete the broader feature model. The evaluation of visual modeling extensions is next step on this research.
+The pragmatic pedagogical lens adopted here emphasizes observable use: students explore, test, and learn through the specific feedback and interaction patterns that Code Pad or JShell provide.
+
+Future work will formalize this comparison through feature modeling, allowing these pragmatic observations to be represented systematically
+
+As a next step, we plan to formalize the comparative model using tools such as FeatureIDE, and to investigate other BlueJ features—especially visual modeling and object inspection—as subjects for future papers.
+
 
 
 \bibliographystyle{plain}
