--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -47,3 +47,55 @@
 }
 
 %https://en.wikipedia.org/wiki/JShell
+
+
+@techreport{kang1990foda,
+  author    = {Kyo C. Kang and Sholom G. Cohen and James A. Hess and William E. Novak and A. Spencer Peterson},
+  title     = {Feature-Oriented Domain Analysis (FODA) Feasibility Study},
+  institution = {Software Engineering Institute, Carnegie Mellon University},
+  address   = {Pittsburgh, PA},
+  year      = {1990},
+  number    = {CMU/SEI-90-TR-021},
+  url       = {https://resources.sei.cmu.edu/library/asset-view.cfm?assetid=11231},
+  note      = {Accessed: 2025-10-10}
+}
+
+@article{batory2004scaling,
+  author    = {Don Batory and J. N. Sarvela and Axel Rapp},
+  title     = {Scaling Step-Wise Refinement},
+  journal   = {IEEE Transactions on Software Engineering},
+  volume    = {30},
+  number    = {6},
+  pages     = {355--371},
+  year      = {2004},
+  doi       = {10.1109/TSE.2004.23}
+}
+
+@article{north2006bdd,
+  author  = {Dan North},
+  title   = {Introducing BDD},
+  journal = {Better Software Magazine},
+  year    = {2006},
+  month   = {March-April},
+  url     = {https://dannorth.net/introducing-bdd/},
+  note    = {Accessed: 2025-10-10}
+}
+
+@book{sommerville2015software,
+  author    = {Ian Sommerville},
+  title     = {Software Engineering},
+  edition   = {10th},
+  publisher = {Pearson},
+  year      = {2015},
+  address   = {Boston}
+}
+
+@book{pressman2019software,
+  author    = {Roger S. Pressman and Bruce R. Maxim},
+  title     = {Software Engineering: A Practitioner's Approach},
+  edition   = {9th},
+  publisher = {McGraw-Hill Education},
+  year      = {2019},
+  address   = {New York}
+}
+
