Motivation before review.

--- a/paper/codepad-jshell.tex
+++ b/paper/codepad-jshell.tex
@@ -64,18 +64,17 @@ Regardless of pedagogical foundations or teaching philosophy, students respond p
 
 This study is motivated by classroom observations in an undergraduate Computer Science course following the adoption of Java, BlueJ, and the objects-first approach. Over several semesters, students have displayed distinct patterns of exploration and inquiry depending on the environment available to them.
 
-
 Since the adoption of that approach, more than two decades have passed. During this period, three main factors have been observed: (a) a significant increase in computer literacy, (b) broader access to new devices and software, and (c) a shift in the very notion of what a computer program is.
 
-BlueJ is a desktop application, with a look and feel that is contrasting with current applications. In particular, the multiple document interface causes the most distracting factor during classes.
+BlueJ is a desktop application whose look and feel contrast with that of contemporary software. In particular, its multiple-document interface has become one of the most distracting factors during classes.
 
-Students usually prefer other programming environments, usually, Microsoft Visual Studio Code. Sometimes there is a pressure of senior students to move directly to a more professional editor. 
+Students often prefer other programming environments, most notably Microsoft Visual Studio Code. In some cases, there is even peer pressure from senior students to move directly to a more professional editor.
 
 %Other editors include simple text editors, like Geany. No matter the editor, we can be sure that the Java Development Kit, that includes the Java Sheel, is available.
 
-VS Code can be run locally or even on the cloud, through a web browser. This allows the students to use tablet devices and also offer a more familiar and professional looking user interface. Some students bring their own notebook or tablet devices, but most have access to more than one computer. The cloud-based VS Code will not need a separate Java and BlueJ installation and will keep all projects on the same cloud-based folder.
+Visual Studio Code can be run locally or in the cloud through a web browser. This flexibility allows students to use tablet devices while providing a more familiar and professional-looking interface. Some students bring their own laptops or tablets, but most have access to more than one computer. The cloud-based version of VS Code eliminates the need for separate Java and BlueJ installations and keeps all projects organized within the same cloud folder.
 
-In this way, there is a need to offer a BlueJ-like experience for students that opt out of the BlueJ program. 
+In this context, there is a clear need to provide a BlueJ-like experience for students who choose not to use the BlueJ environment.
 
 \section{Research Question}
 
