Research question before review.

--- a/paper/codepad-jshell.tex
+++ b/paper/codepad-jshell.tex
@@ -60,17 +60,17 @@ Ultimately, we need to better define what “education” means in programming, 
 
 \section{Motivation}
 
-Regardless of pedagogical foundations or teaching philosophy, students respond primarily to the tools actually at hand. Their exploratory behavior is therefore shaped more by the affordances of the environment—what the interface allows them to do—than by abstract learning principles. In this sense, tools such as BlueJ’s Code Pad and Java’s JShell not only mediate how students write code but also how they conceptualize programming itself.
+Regardless of pedagogical foundations or teaching philosophy, students respond primarily to the tools actually at hand. Their exploratory behavior is therefore shaped more by the affordances of the environment—what the interface allows them to do—than by abstract learning principles. In this sense, tools such as BlueJ’s \textit{Code Pad} and Java’s \textit{JShell} not only mediate how students write code but also how they conceptualize programming itself.
 
-This study is motivated by classroom observations in an undergraduate Computer Science course following the adoption of Java, BlueJ, and the objects-first approach. Over several semesters, students have displayed distinct patterns of exploration and inquiry depending on the environment available to them.
+This study is motivated by classroom observations in an undergraduate Computer Science course following the adoption of Java, BlueJ, and the \textit{objects-first} approach. Over several semesters, students have displayed distinct patterns of exploration and inquiry depending on the environment available to them.
 
 Since the adoption of that approach, more than two decades have passed. During this period, three main factors have been observed: (a) a significant increase in computer literacy, (b) broader access to new devices and software, and (c) a shift in the very notion of what a computer program is.
 
-BlueJ is a desktop application whose look and feel contrast with that of contemporary software. In particular, its multiple-document interface has become one of the most distracting factors during classes.
+\textit{BlueJ} is a desktop application whose look and feel contrast with that of contemporary software. In particular, its multiple-document interface has become one of the most distracting factors during classes.
 
 Students often prefer other programming environments, most notably Microsoft Visual Studio Code. In some cases, there is even peer pressure from senior students to move directly to a more professional editor.
 
-%Other editors include simple text editors, like Geany. No matter the editor, we can be sure that the Java Development Kit, that includes the Java Sheel, is available.
+%Other editors include simple text editors, like Geany. No matter the editor, we can be sure that the Java Development Kit, which includes the Java Shell, is available.
 
 Visual Studio Code can be run locally or in the cloud through a web browser. This flexibility allows students to use tablet devices while providing a more familiar and professional-looking interface. Some students bring their own laptops or tablets, but most have access to more than one computer. The cloud-based version of VS Code eliminates the need for separate Java and BlueJ installations and keeps all projects organized within the same cloud folder.
 
@@ -78,18 +78,21 @@ In this context, there is a clear need to provide a BlueJ-like experience for st
 
 \section{Research Question}
 
-The overall research question is broad: Could we have a BlueJ-like learning experience using professional tools?
+The central research question of this study is broad: can a BlueJ-like learning experience be achieved using professional tools such as Java’s JShell?
 
-BlueJ has many pedagogically founded features. Therefore we must compare the experience on each feature. This study focus on the interactive and exploratory learning experience offered by BlueJ Code Pad.
+BlueJ includes many pedagogically grounded features. Therefore, it is necessary to compare the learning experience associated with each feature. This study focuses on the interactive and exploratory learning experience offered by BlueJ’s Code Pad.
 
-Therefore, the main question of this study is:
-Could the use of the Java Shell provide students with a learning experience comparable to the one provided by the BlueJ Code Pad?
+Therefore, the main research question of this study is:
+Can the use of Java’s JShell provide students with a learning experience comparable to the one offered by BlueJ’s Code Pad?
 
-Even with this focus, we need to use sub-features to allow a direct comparison. By doing so, we provide a feature model that would help to understand the learning experience offered by both programs.
+
+Even with this focus, we need to use sub-features to allow a direct comparison. By doing so, we provide a list of pragmatic features  that would help to understand the learning experience offered by both programs.
 
 %, one of the many BlueJ pedagogically found features
 
 %JShell was not available at the time that the BlueJ was proposed. Read-eval-loop shells were available since the adoption of interpreted languages, including the Unix bash shell, BASIC, and popular languages like Python and ECMAScript.
+
+To answer this question, the study combines feature-oriented modeling, benchmark examples, and a review of related literature. This methodological combination allows a pragmatic and pedagogically informed comparison between BlueJ’s Code Pad and Java’s JShell, focusing on the interactive features that shape students’ learning experiences.
 
 
 \section{Methodology}
